Fixed z-index bug with navbar
Now you can actually click on it on mobile.

--- a/stylesheets/swiss.css
+++ b/stylesheets/swiss.css
@@ -269,6 +269,9 @@ div.navbar {
 a.navbar_link, a.navbar_link_vanishing {
   text-decoration: none;
   margin: 0;
+  display: inline-block;
+  position: relative;
+  z-index: 20;
 }
 
 a.navbar_link:hover, a.navbar_link_vanishing:hover {
@@ -310,7 +313,7 @@ div.navbar_buttons {
         padding-left:  5px;
         padding-right: 5px;
         overflow: hidden;
-        z-index: 2;
+        z-index: 200;
         font-size: 1.2em;
     }
 }
@@ -402,7 +405,7 @@ div.navbar_buttons {
   }
 }
 
-@media (max-width: 660px) {
+@media (max-width: 694px) {
     .name_box {
         font-size: 4em;
         padding-top: 15px;
@@ -428,6 +431,7 @@ div.navbar_buttons {
         max-width: 100vw;
         font-weight: 300;
         padding-top: 0.5em;
+        display: block;
     }
 
 }
